# Primal-Affine-Scaling

./: README.md  netlib_mat_parsing.ipynb  pyproject.toml  report.ipynb
src/ampl/: linear_ampl.py
src/primal_affine_scaling/: __init__.py  algorithm.py  big_m.py
src/primal_affine_scaling/utils/: compute_m.py
test/: test_implementation.py
