[project]
name = "primal-affine-scaling"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "reverdat", email = "arnauperezre@gmail.com" }
]
dependencies = [
    "numpy>=2.2.3",
    "polars>=1.24.0",
    "ipykernel>=6.29.5",
    "requests>=2.32.3",
    "beautifulsoup4>=4.13.3",
    "scipy>=1.15.2",
    "amplpy>=0.14.0",
    "pytest>=8.3.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/primal_affine_scaling"]
